# test-repo-parmoham

./: .bazelrc  .coveragerc  .crux_template.md  .gitignore  .pre-commit-config.yaml  BAZEL_BUILD.md  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.base-dependencies  Dockerfile.complete  Dockerfile.pull  MODULE.bazel  README.md  WORKSPACE  conftest.py  install_bazelisk.sh  pre-cr  prerequisites.sh  pyproject.toml  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  test-config.yml
.github/workflows/: aten-scheduled.yml  build-base-image.yml  integration-tests.yml.disabled  kaizen-tests.yml  lint.yml  lint.yml.disabled  merge.yml  nightly-dispatcher.yml  nightly.yml  original-pr.yml.disabled  pr.yml  pull.yml  test.yml  test.yml.disabled
bazel/: BUILD  nrt.BUILD  nrt_extension.bzl  python_config.bzl  torch.BUILD  torch_extension.bzl
docker/: Dockerfile.torch-neuronx-base
docs/: decompositions.md  environment_variables.md  new_op.md  ops.html
docs/src/: conf.py  decompositions.rst  environment_variables.rst  index.rst
examples/compile/: QUICKSTART.md  device_placement.py  distributed.py  dtype_handling.py  nki_integration.py
examples/fused_attention/: multihead_attention_forward.py  scaled_dot_product_attention.py
examples/gpt2-train-loop/: train.py
examples/llama/: llama.py  transformer_block.py
examples/multi_node_tests/: README.md  data_parallel_multi_node_example.py  run_multi_node.sh  run_parallel_training.sh
examples/simple_asr/: train_conformer.py
examples/simple_moe/: self_attention.py  simple_moe.py
examples/torch_compile/: README.md  test_distributed.py
tests/: __init__.py
tests/allocator/: test_allocator.py
tests/autocast/: test_autocast.py
tests/cache/: conftest.py  test_persistent_caching_e2e.py
tests/cpu_fallback/: test_cpu_fallback.py
tests/csrc/: BUILD.bazel  CMakeLists.txt  test_utils.bzl
tests/csrc/core/: KernelExecutionTest.cpp  NeuronBindingsTest.cpp  NeuronDeviceTest.cpp  NeuronHooksInterfaceTest.cpp  NeuronTensorImplTest.cpp  NrtBarrierLogicTest.cpp  OperationContextTest.cpp  OperationExecutionEngineTest.cpp  ProfilerMappingCollectorTest.cpp  StorageImplTest.cpp
tests/csrc/core/allocator/: NeuronCachingAllocatorTest.cpp  ShelvesCleanupTest.cpp
tests/csrc/core/cache/: FileLockTest.cpp  PersistentCacheBackendTest.cpp
tests/csrc/core/compilation/: CacheEntryTest.cpp  CompilationCacheTest.cpp  NeuronCompilerTest.cpp
tests/csrc/core/concatenation/: ConcatenationCoreTest.cpp  ConcatenationEngineTest.cpp  FunctionPruneUtilsTest.cpp  IrConcatStrategyTest.cpp  IrNodeManagerTest.cpp  IrNodeTest.cpp  OpConcatUtilsDependencyTest.cpp  OpConcatUtilsOptimizationTest.cpp  OpConcatUtilsSkipIntermediatesTest.cpp  OpConcatUtilsTest.cpp  input_inc_1.mlir
tests/csrc/core/distributed/: NeuronWatchdogTest.cpp  NeuronWorkTest.cpp
tests/csrc/core/lazy_materialization/: ContiguousTransposeTest.cpp  LazyTransformationManagerTest.cpp  OperationPrologueTest.cpp  TransformationsTest.cpp
tests/csrc/core/metrics/: NeuronMetricsTest.cpp
tests/csrc/core/opbuilder/module_builder/: ReshapeOpBuilderTest.cpp  SliceOpBuilderTest.cpp  TransposeOpBuilderTest.cpp
tests/csrc/core/runtime/: ModelHandleCacheTest.cpp  NRTHandlerTest.cpp  NRTUtilsTest.cpp
tests/csrc/core/streams/: StreamImplTest.cpp  StreamManagerTest.cpp
tests/csrc/core/utils/: CPUFallbackContextTest.cpp  CPUFallbackExecutorTest.cpp  ErrorHandlerTest.cpp  ErrorRecoveryTest.cpp  NeuronResourceManagerTest.cpp  PythonTypeConverterTest.cpp  TensorContextTest.cpp
tests/csrc/mocks/: MockCPUFallbackExecutor.cpp  MockCPUFallbackExecutor.h  MockConcatenationCore.h  MockCopyUtils.cpp  MockCopyUtils.h  MockKernelExecution.h  MockNRT.cpp  MockNRT.h  MockNeuronBindings.cpp  MockNeuronBindings.h  MockNeuronDevice.cpp  MockNeuronDevice.h  MockOperationExecutionEngine.h  MockPythonUtils.cpp  MockStreamImpl.h
tests/csrc/profiler/: NConfigParserTest.cpp  SessionTest.cpp
tests/csrc/utils/: TestUtils.h
tests/device/: test_device.py  test_device_lnc1_all_cores.py  test_global_default_device.py  test_multi_device.py  test_neuron_module.py  test_rng_state.py
tests/distributed/: conftest.py  test_utils.py
tests/huggingface/: README.md  fetch_top_model_configs.py  hf_moduscope.py  test_hf_models.py
tests/kernels/: __init__.py  test_base_kernel.py  test_cache_key.py  test_compiler_subprocess.py  test_hlo_dump.py  test_neuronx_cc_wrapper.py  test_stablehlo_compilation.py  test_type_converter.py  test_xla_full_compilation.py  test_xla_hlo_generation.py  test_xla_kernel.py
tests/memory/: test_memory_stats.py
tests/nki/: test_nki_aliasing.py  test_nki_cache_key_generation.py  test_nki_device_print.py  test_nki_kernel.py  test_nki_op.py  test_nki_v2.py  test_slice_input_mismatch.py
tests/operations/: test_clone.py  test_comparison_ops.py  test_copy_cpu_to_neuron.py  test_copy_float64.py  test_copy_from_and_resize.py  test_copy_neuron_to_cpu.py  test_copy_neuron_to_neuron.py  test_copy_noncontiguous.py  test_copy_scalar.py  test_empty_memory_format.py  test_has_compatible_shallow_copy_type.py  test_lazy_materialization_cache.py  test_local_scalar_dense.py  test_memory_format_validation.py  test_neuron_view_ops.py  test_new_empty.py  test_resize.py  test_scalar_transfer.py  test_serialization.py  test_set_.py  test_shallow_copy.py  test_slice_ops.py  test_to_copy_basic.py  test_to_copy_no_cpu_bounce.py  test_to_copy_recursion_chain.py  test_unary_ops.py
tests/profiler/: test_neuron_profiling.py  test_profiler_integration.py
tests/python_ops/: test_add.py  test_addmm.py  test_addmv.py  test_addxmul_div.py  test_amax_amin.py  test_any_all.py  test_arange.py  test_atleast2d.py  (+113 more)
tools/: aten-functions.py  build  build-and-test  build-and-test-parallel  install-cpp-test-dependencies  list-implemented-ops  pre-commit  run-block-test  run-cpp-test  run-cpp-test-cmake  run-test  run-test-parallel
torch_neuronx/: __init__.py  _build_config.py  memory.py  metrics.py  neuron.py  nki_hop.py  nki_kernel.py  profiling.py  streams.py  type_converter_base.py  utils.py
(+704 files in other folders)
