module(
    name = "torch_neuronx",
    version = "0.1.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.9")
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "rules_uv", version = "0.88.0")
bazel_dep(name = "protobuf", version = "33.0-rc1")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "googletest", version = "1.17.0.bcr.1")
bazel_dep(name = "xxhash", version = "0.8.3")

# Configure Python toolchain to use Python 3.10
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.10")
use_repo(python, "python_3_10")

# PyTorch local dependency setup
torch_extension = use_extension("//bazel:torch_extension.bzl", "torch_extension")
use_repo(torch_extension, "torch")

# # NRT (Neuron Runtime) local dependency setup
nrt_extension = use_extension("//bazel:nrt_extension.bzl", "nrt_extension")
use_repo(nrt_extension, "nrt")
