[project]
name = "torch-neuronx"
version = "0.1.0"
description = "Neuron Backend for PyTorch"
authors = [{name = "AWS Neuron Team"}]
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch~=2.10",
    "numpy<2", # neuronx-cc requires numpy 1.x
    "grpcio-tools",
    "wheel",
]

[project.entry-points."torch.backends"]
torch_neuronx = "torch_neuronx:_autoload"

[project.entry-points."torch_dynamo_backends"]
neuron = "torch_neuronx.neuron_dynamo_backend.backend:neuron_backend"

[build-system]
requires = ["setuptools", "wheel", "torch", "grpcio-tools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "expecttest>=0.3.0",
    "hypothesis",
    "ninja>=1.11.1.4",
    "pytest",
    "pytest-xdist",
    "pytest-html",
    "pytest-cov",
    "pytest-json-report",
    "pytest-timeout",
    "ruff>=0.8.0",
    "pyzstd",
    "pytest-forked",
    "PyYAML"
]

docs = [
    "sphinx>=8.0",
    "sphinx-book-theme",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["build", "dist", ".eggs"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"tests/*" = ["S101", "F401"]  # Allow assert and unused imports in tests (torch_neuronx needs to be imported for side effects)
"examples/**/*" = ["F401"]  # Allow unused imports in examples for side effects
